# timesdump

./: .gitignore  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/: copilot-instructions.md  copilot-setup-steps.yml  dependabot.yml
.github/agents/: buildtest.agent.md
.github/workflows/: artifacts.yml  build.yml  ci.yml  copilot-setup-steps.yml  release.yml  rust.yml
macos/Timesdump/Timesdump/: Info.plist  TimesdumpApp.swift
macos/Timesdump/Timesdump.xcodeproj/: project.pbxproj
macos/Timesdump/Timesdump.xcodeproj/xcshareddata/xcschemes/: Timesdump.xcscheme
macos/Timesdump/Timesdump/Models/: AppState.swift  TimestampResult.swift
macos/Timesdump/Timesdump/Resources/en.lproj/: Localizable.strings
macos/Timesdump/Timesdump/Resources/zh-Hans.lproj/: Localizable.strings
macos/Timesdump/Timesdump/Services/: ClipboardMonitor.swift  TimeParser.swift
macos/Timesdump/Timesdump/Views/: HUDView.swift  HUDWindowController.swift  SettingsView.swift  SettingsWindowController.swift
macos/Timesdump/TimesdumpTests/: TimeParserTests.swift
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ghost_window.rs  lib.rs  main.rs  tray.rs
src/components/: HudView.tsx  SettingsView.tsx
src/lib/: i18n.ts
src/locales/: en.json  zh-CN.json
windows/: Timesdump.sln
windows/Timesdump/: App.xaml  App.xaml.cs  PInvoke.cs  Timesdump.csproj  app.manifest
windows/Timesdump.Tests/: TimeParserTests.cs  Timesdump.Tests.csproj
windows/Timesdump/Assets/: README.md
windows/Timesdump/Models/: AppSettings.cs  TimestampResult.cs
windows/Timesdump/Services/: ClipboardMonitor.cs  LocalizationHelper.cs  TimeParser.cs
windows/Timesdump/Strings/en-US/: Resources.resw
windows/Timesdump/Strings/zh-CN/: Resources.resw
windows/Timesdump/Views/: HUDWindow.cs  SettingsWindow.cs
