[package]
name = "timesdump"
version = "0.1.0"
edition = "2021"

[lib]
name = "timesdump"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "timesdump"
path = "src/main.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
